fixing size on mobile

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -132,7 +132,7 @@
    -webkit-overflow-scrolling:touch !important;
    overflow-y: scroll !important;
    @media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {
-     margin-left: 2%;
+     margin-left: 4%;
      margin-top: 1%;
      width: 90%;
      height: 60%;
